--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Daniel's Page</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>Hello World, My name is Daniel</h1>
+
     </body>
 </html>
