--- a/index.html
+++ b/index.html
@@ -2,9 +2,37 @@
 <html>
     <head>
         <title>Daniel's Page</title>
+        <link rel="stylesheet" type="text/css" href="WebDev.css">
     </head>
     <body>
-        <h1>Hello World, My name is Daniel I am 19 Years old.</h1>
+        <div class="header">
+            <h1>Hello World, My name is Daniel I am 19 Years old.</h1>
+        </div>
 
+        <div class="topnav">
+            <a href="#">1st Link</a>
+            <a href="#">2nd Link</a>
+            <a href="#">3rd Link</a>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <h2>Column 1</h2>
+                <p>This is my 1st column</p>
+            </div>
+
+            <div class="column">
+                <h2>Column 2</h2>
+                <p>This is my 2nd column</p>
+            </div>
+
+            <div class="column">
+                <h2>Column 3</h2>
+                <p>This is my 3rd column</p>
+            </div>
+        </div>
+            
+
+        
     </body>
 </html>
