--- a/Page1.html
+++ b/Page1.html
@@ -7,6 +7,7 @@
         <div class="grid-container">
             <div class="Header">Hello my name is Daniel and I am 19 Years Old and this is my website.</div>
             <div class="Navbar">
+                <a href="index.html">Homepage</a>
                 <a href="Page2.html">2nd Webpage</a>
                 <a href="Page3.html">3rd Webpage</a>
             </div>
