--- a/Page2.html
+++ b/Page2.html
@@ -7,6 +7,7 @@
         <div class="grid-container">
             <div class="Header">Hello my name is Daniel and I am 19 Years Old</div>
             <div class="Navbar">
+                <a href="index.html">Homepage</a>
                 <a href="Page1.html">1st Webpage</a>
                 <a href="Page3.html">3rd Webpage</a>
             </div>
