--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Daniel's Page</title>
         <link rel="stylesheet" type="text/css" href="WebDev.css">
     </head>
     <body>
         <div class="grad">
         <div class="grid-container">
-            <div class="Header">Hello my name is Daniel and I am 19 Years Old suushufhsufsuf </div>
+            <div class="Header">Hello user, welcome to my website. This is my BTEC Information Systems and Technology L3 first website creation. </div>
             <div class="Navbar">
                 <a href="Page1.html">1st Webpage</a>
                 <a href="Page2.html">2nd Webpage</a>
                 <a href="Page3.html">3rd Webpage</a>
             </div>
             <div class="Column1">
-            <table width="80%">
+            <table width="85%">
                 <tr>
                     <th>Upcoming Games</th>
                     <th>Release Date</th>
@@ -22,15 +23,15 @@
                 </tr>
                     <td>Call of Duty: Cold War</td>
                     <td>November 13th 2020</td>
-                    <td><img src="assets/bocw.jpg" width="150px" height="100px"></td>
+                    <td><img src="assets/bocw.jpg" width="160px" height="110px"></td>
                 <tr>
                     <td>Godfall</td>
                     <td>12th November 2020</td>
-                    <td><img src="assets/godfall.png" width="150px" height="100px"></td>
+                    <td><img src="assets/godfall.png" width="160px" height="110px"></td>
                 </tr>
                     <td>Amnesia: Rebirth</td>
                     <td>20th October 2020</td>
-                    <td></td>
+                    <td><img src="assets/amnesia.jpg" width="160px" height="110px"></td>
             </table>
             </div>  
             <div class="Column2">
