--- a/Page1.html
+++ b/Page1.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Daniel's Page</title>
         <link rel="stylesheet" type="text/css" href="WebDev.css">
     </head>
@@ -11,7 +12,9 @@
                 <a href="Page2.html">2nd Webpage</a>
                 <a href="Page3.html">3rd Webpage</a>
             </div>
-            <div class="Column1">Hello, I am the first column</div>
+            <div class="Column1">
+                <img src="assets/puppy.jpg" style="max-width:100%;height:auto;">
+            </div>
             <div class="Column2">Hello, I am the second column</div>
             <div class="Column3">Hello, I am the third column</div>
           </div>
