--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Daniel's Page</title>
         <link rel="stylesheet" type="text/css" href="WebDev.css">
     </head>
@@ -15,39 +14,67 @@
                 <a href="Page3.html">3rd Webpage</a>
             </div>
             <div class="Column1">
-            <table width="85%">
+            <table style="width:100%" border:1>
                 <tr>
                     <th>Upcoming Games</th>
                     <th>Release Date</th>
                     <th>Picture of Game</th>
                 </tr>
-                    <td>Call of Duty: Cold War</td>
+                    <td>Call of Duty: Cold War (PS5, PS4, Xbox One, Xbox Series S/X, PC)</td>
                     <td>November 13th 2020</td>
-                    <td><img src="assets/bocw.jpg" width="160px" height="110px"></td>
+                    <td><img src="assets/bocw.jpg" width="150px" height="110px"></td>
                 <tr>
-                    <td>Godfall</td>
+                    <td>Godfall (Playstation 5, PC)</td>
                     <td>12th November 2020</td>
-                    <td><img src="assets/godfall.png" width="160px" height="110px"></td>
+                    <td><img src="assets/godfall.png" width="150px" height="110px"></td>
                 </tr>
-                    <td>Amnesia: Rebirth</td>
+                    <td>Amnesia: Rebirth (PlayStation 4, Microsoft Windows, Linux, Macintosh operating systems)</td>
                     <td>20th October 2020</td>
-                    <td><img src="assets/amnesia.jpg" width="160px" height="110px"></td>
+                    <td><img src="assets/amnesia.jpg" width="150px" height="110px"></td>
             </table>
             </div>  
             <div class="Column2">
-                <table width="90%">
+                <table width="100%">
                     <tr>
-                        <th>Header 1</th>
-                        <th>Header 2</th>
+                        <th>College Modules</th>
+                        <th>Level of course</th>
                     </tr>
-                        <td>Data is going to be inputted here</td>
-                        <td>Data is going to be inputted here</td>
+                        <td style="color:darkred">Being Organised</td>
+                        <td style="color:darkred">Level 1</td>
                     <tr>
-                        <td>Data is going to be inputted here</td>
-                        <td>Data is going to be inputted here</td>
+                        <td style="color:darkred">Developing a Personal Progression Plan</td>
+                        <td style="color:darkred">Level 1</td>
                     </tr>
-                        <td>Data is going to be inputted here</td>
-                        <td>Data is going to be inputted here</td>
+                        <td style="color:darkred">Developing and Editing Information</td>
+                        <td style="color:darkred">Level 1</td>
+                    <tr>
+                        <td style="color:darkred">The Online World</td>
+                        <td style="color:darkred">Level 2</td>
+                    </tr>
+                        <td style="color:darkred">Digital Portfolio</td>
+                        <td style="color:darkred">Level 2</td>
+                    <tr>
+                        <td style="color:darkred">Digital Graphics</td>
+                        <td style="color:darkred">Level 2</td>
+                    </tr>
+                        <td style="color:darkred">Event Driven Programming</td>
+                        <td style="color:darkred">Level 3 (Year 1)</td>
+                    <tr>
+                        <td style="color:darkred">Communications and Employability</td>
+                        <td style="color:darkred">Level 3 (Year 1)</td>
+                    </tr>
+                        <td style="color:darkred">Procedural Programming</td>
+                        <td style="color:darkred">Level 3 (Year 1)</td>
+                    </tr>
+                        <td style="color:darkgreen">Communications and Technology</td>
+                        <td style="color:darkgreen">Level 3 (Year 2)</td>
+                    <tr>
+                        <td style="color:darkgreen">Computer Networks</td>
+                        <td style="color:darkgreen">Level 3 (Year 2)</td>
+                    </tr>
+                        <td style="color:darkgreen">Web Development</td>
+                        <td style="color:darkgreen">Level 3 (Year 2)</td>
+                    </tr>
                 </table>
             </div>
             <div class="Column3">
@@ -68,8 +95,5 @@
             </div>
           </div>
         </div>
-            
-
-        
     </body>
 </html>
