--- a/Page1.html
+++ b/Page1.html
@@ -5,16 +5,22 @@
         <link rel="stylesheet" type="text/css" href="WebDev.css">
     </head>
     <body>
-        <div class="grid-container">
-            <div class="Header">Hello my name is Daniel and I am 19 Years Old and this is my website.</div>
-            <div class="Navbar">
-                <a href="index.html">Homepage</a>
-                <a href="Page2.html">2nd Webpage</a>
-                <a href="Page3.html">3rd Webpage</a>
-            </div>
-            <div class="Column1">
-                <img src="assets/puppy.jpg" style="max-width:100%;height:auto;">
-            </div>
-            <div class="Column2">Hello, I am the second column</div>
-            <div class="Column3">Hello, I am the third column</div>
-          </div>
+        <div class="grad">
+            <div class="grid-container1">
+                <div class="Navbar1">
+                    <a href="index.html">Homepage</a>
+                    <a href="Page2.html">2nd Webpage</a>
+                    <a href="Page3.html">3rd Webpage</a>
+                </div>
+                <div class="Header1">This page will be showcasing the 3D and 2D Transformations that you can do in CSS.</div>
+                <div class="Picture1">
+                    <img src="assets/Logo.png" width="100px" height="100px">
+                </div>
+                <div class="Transform2D">This div element is translating 50 px from its original location (2D)</div>
+                <div class="Scale">This div element is scaling the size by 2x the original size (2D)</div>
+                <div class="Rotate">This div element is rotating 35 degrees to the right (2D)</div>
+                <div class="Transformation3D">This Div element is showing off a 3D rotation of 150 degrees</div>
+              </div>
+        </div>
+    </body>
+</html>
