--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 <a href="Page2.html">2nd Webpage</a>
                 <a href="Page3.html">3rd Webpage</a>
             </div>
+            <div class="Logo">
+                <img src="assets/Logo.png" width="100px" height="100px">
+            </div>
             <div class="Column1">
             <table style="width:100%" border:1>
                 <tr>
