--- a/Page3.html
+++ b/Page3.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Daniel's Page</title>
@@ -8,7 +9,7 @@
             <div class="Header">Hello my name is Daniel and I am 19 Years Old</div>
             <div class="Navbar">
                 <a href="index.html">Homepage</a>
-                <a href="Page1.html">1st Webpage</a>
+                <a href="Page1.html">3D/2D CSS transitions</a>
                 <a href="Page2.html">2nd Webpage</a>
             </div>
             <div class="Column1">Hello, I am the first column</div>
