--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <title>Daniel's Page</title>
         <link rel="stylesheet" type="text/css" href="WebDev.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div class="grad">
+        <div class="background">
         <div class="grid-container">
             <div class="Header">Hello user, welcome to my website. This is my BTEC Information Systems and Technology L3 first website creation. </div>
             <div class="Navbar">
-                <a href="Page1.html">1st Webpage</a>
+                <a href="Page1.html">3D/2D CSS transitions</a>
                 <a href="Page2.html">2nd Webpage</a>
                 <a href="Page3.html">3rd Webpage</a>
             </div>
@@ -37,7 +38,7 @@
             </table>
             </div>  
             <div class="Column2">
-                <table width="100%">
+                <table style="width:100%">
                     <tr>
                         <th>College Modules</th>
                         <th>Level of course</th>
@@ -81,7 +82,7 @@
                 </table>
             </div>
             <div class="Column3">
-                <table width="95%">
+                <table style="width:95%">
                     <tr>
                         <th>Header 1</th>
                         <th>Header 2</th>
