--- a/Page1.html
+++ b/Page1.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -5,7 +6,6 @@
         <link rel="stylesheet" type="text/css" href="WebDev.css">
     </head>
     <body>
-        <div class="grad">
             <div class="grid-container1">
                 <div class="Navbar1">
                     <a href="index.html">Homepage</a>
@@ -16,10 +16,10 @@
                 <div class="Picture1">
                     <img src="assets/Logo.png" width="100px" height="100px">
                 </div>
-                <div class="Transform2D">This div element is translating 50 px from its original location (2D)</div>
-                <div class="Scale">This div element is scaling the size by 2x the original size (2D)</div>
-                <div class="Rotate">This div element is rotating 35 degrees to the right (2D)</div>
-                <div class="Transformation3D">This Div element is showing off a 3D rotation of 150 degrees</div>
+                <div class="Transform2D" style="margin-top:30px">This div element is translating 50 px from its original location (2D)</div>
+                <div class="Scale" style="margin-top:100px">This div element is scaling the size by 2x the original size (2D)</div>
+                <div class="Rotate" style="margin-top:30px">This div element is rotating 35 degrees to the right (2D)</div>
+                <div class="Transformation3D">This Div element is showing off a 3D transition of decreasing the width and increasing the height of the box.</div>
               </div>
         </div>
     </body>
