--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <link rel="stylesheet" type="text/css" href="WebDev.css">
     </head>
     <body>
-        <div class="grad">
+        <div class="background">
         <div class="grid-container">
             <div class="Header">Hello user, welcome to my website. This is my BTEC Information Systems and Technology L3 first website creation. </div>
             <div class="Navbar">
-                <a href="Page1.html">1st Webpage</a>
-                <a href="Page2.html">2nd Webpage</a>
+                <a href="Page1.html">3D/2D CSS Transitions</a>
+                <a href="Page2.html">Details Page</a>
                 <a href="Page3.html">3rd Webpage</a>
             </div>
             <div class="Logo">
