--- a/Page2.html
+++ b/Page2.html
@@ -4,14 +4,20 @@
         <link rel="stylesheet" type="text/css" href="WebDev.css">
     </head>
     <body>
-        <div class="grid-container">
-            <div class="Header">Hello my name is Daniel and I am 19 Years Old</div>
-            <div class="Navbar">
-                <a href="index.html">Homepage</a>
-                <a href="Page1.html">1st Webpage</a>
-                <a href="Page3.html">3rd Webpage</a>
+        <div class="background">
+            <div class="grid-container2">
+                <div class="Header2">This is going to be the information page about how I done each transition/effect on my websites</div>
+                <div class="Navbar2">
+                    <a href="index.html">Homepage</a>
+                    <a href="Page1.html">3D/2D CSS Transitions</a>
+                    <a href="Page3.html">3rd Webpage</a>
+                </div>
+                <div class="Information"></div>
+                <div class="CodeSnippet"></div>
+                <div class="CodeSnippet1"></div>
+                <div class="CodeSnippet2"></div>
+              </div>
             </div>
-            <div class="Column1">Hello, I am the first column</div>
-            <div class="Column2">Hello, I am the second column</div>
-            <div class="Column3">Hello, I am the third column</div>
-          </div>
+        </div>
+    </body>
+</html>
